--- a/AWS/apps/values.yaml
+++ b/AWS/apps/values.yaml
@@ -4,7 +4,7 @@ svc:
     docker_image: docker.io/kennethreitz/httpbin
     replicas: 1
     port: 80
-    host : "qa.eks-base.nodevops.nl"
+    host : "qa.test.globalolptiix.com"
     apiPrefix: "/status"
     ingresNamespace: istio-system
     ingressAppLabels: 
@@ -15,7 +15,7 @@ svc:
     docker_image: nginx
     replicas: 1
     port: 80
-    host : "nginx.eks-base.nodevops.nl"
+    host : "test.globalolptiix.com"
     apiPrefix: "/"
     ingresNamespace: istio-system
     ingressAppLabels: 
